crates/autoresolve/tests/compile_fail/missing_dependency.stderr
error[E0277]: the trait bound `Telemetry: ResolveFrom<__AutoresolveBase>` is not satisfied
  --> tests/compile_fail/missing_dependency.rs:30:34
   |
30 |     let _client = resolver.get::<Client>();
   |                            ---   ^^^^^^ unsatisfied trait bound
   |                            |
   |                            required by a bound introduced by this call
   |
help: the trait `ResolveFrom<__AutoresolveBase>` is not implemented for `Telemetry`
  --> tests/compile_fail/missing_dependency.rs:7:1
   |
 7 | struct Telemetry;
   | ^^^^^^^^^^^^^^^^
help: the following other types implement trait `ResolveFrom<T>`
  --> tests/compile_fail/missing_dependency.rs:15:1
   |
15 | #[resolvable]
   | ^^^^^^^^^^^^^ `Client`
...
29 |     let mut resolver = autoresolve::resolver!(builtins: Builtins);
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Builtins`
note: required for `Client` to implement `ResolveFrom<__AutoresolveBase>`
  --> tests/compile_fail/missing_dependency.rs:15:1
   |
15 | #[resolvable]
   | ^^^^^^^^^^^^^ unsatisfied trait bound introduced here
16 | impl Client {
   |      ^^^^^^
note: required by a bound in `Resolver::<T>::get`
  --> src/resolver.rs
   |
   |     pub fn get<O>(&mut self) -> &O
   |            --- required by a bound in this associated function
   |     where
   |         O: ResolveFrom<T>,
   |            ^^^^^^^^^^^^^^ required by this bound in `Resolver::<T>::get`
   = note: this error originates in the attribute macro `resolvable` (in Nightly builds, run with -Z macro-backtrace for more info)
